// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UneditableTextField Should have the proper default props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 54px;
  padding: 0 16px;
  background-color: #EDEDED;
  border-radius: 16px;
  color: #054752;
  font-size: 16px;
  line-height: 54px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 .uneditableTextField-label:not(:first-child) {
  margin-left: 16px;
}

.c0 .uneditableTextField-label--ellipsis {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 .kirk-icon {
  height: 24px;
}

<div
  className="kirk-layout-solid-item uneditableTextField c0"
>
  <div
    className="uneditableTextField-label"
  >
    Hello world
  </div>
</div>
`;

exports[`UneditableTextField Should have the text ellipsed 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 54px;
  padding: 0 16px;
  background-color: #EDEDED;
  border-radius: 16px;
  color: #054752;
  font-size: 16px;
  line-height: 54px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 .uneditableTextField-label:not(:first-child) {
  margin-left: 16px;
}

.c0 .uneditableTextField-label--ellipsis {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 .kirk-icon {
  height: 24px;
}

<div
  className="kirk-layout-solid-item uneditableTextField c0"
>
  <div
    className="uneditableTextField-label uneditableTextField-label--ellipsis"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec tristique sapien, eu placerat justo. Donec tempor, risus ac cursus fringilla, lorem ipsum facilisis tortor, vel molestie sapien justo nec orci.
  </div>
</div>
`;

exports[`UneditableTextField Should support add-ons 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 54px;
  padding: 0 16px;
  background-color: #EDEDED;
  border-radius: 16px;
  color: #054752;
  font-size: 16px;
  line-height: 54px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 .uneditableTextField-label:not(:first-child) {
  margin-left: 16px;
}

.c0 .uneditableTextField-label--ellipsis {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 .kirk-icon {
  height: 24px;
}

<div
  className="kirk-layout-solid-item uneditableTextField c0"
>
  <div>
    Add-on
  </div>
  <div
    className="uneditableTextField-label"
  >
    Hello world
  </div>
</div>
`;

exports[`UneditableTextField Should support component links 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 54px;
  padding: 0 16px;
  background-color: #EDEDED;
  border-radius: 16px;
  color: #054752;
  font-size: 16px;
  line-height: 54px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 .uneditableTextField-label:not(:first-child) {
  margin-left: 16px;
}

.c0 .uneditableTextField-label--ellipsis {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 .kirk-icon {
  height: 24px;
}

<a
  className="kirk-layout-solid-item uneditableTextField c0"
  href="#bar"
>
  <div
    className="uneditableTextField-label"
  >
    Click me
  </div>
</a>
`;

exports[`UneditableTextField Should support simple links 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 54px;
  padding: 0 16px;
  background-color: #EDEDED;
  border-radius: 16px;
  color: #054752;
  font-size: 16px;
  line-height: 54px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 .uneditableTextField-label:not(:first-child) {
  margin-left: 16px;
}

.c0 .uneditableTextField-label--ellipsis {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 .kirk-icon {
  height: 24px;
}

<a
  className="kirk-layout-solid-item uneditableTextField c0"
  href="#foo"
>
  <div
    className="uneditableTextField-label"
  >
    Click me
  </div>
</a>
`;
